<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.auth.fragments.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_horizontal_margin"
        tools:context=".ui.activities.auth.fragments.LoginFragment">

        <TextView
            android:id="@+id/username_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_page_top_margin"
            android:text="@string/username_label"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/username_label"
            tools:text="MyUsername" />

        <TextView
            android:id="@+id/password_label"
            style="@style/field_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_field_vertical_margin"
            android:text="@string/password_label"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/password"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="48dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/password_label" />

        <ImageView
            android:id="@+id/password_show_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/password"
            app:layout_constraintBottom_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password"
            android:background="@drawable/show"
            android:backgroundTint="@color/show_icon_default" />

        <LinearLayout
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <TextView
                android:id="@+id/register_question"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/not_registered" />

            <TextView
                android:id="@+id/register_link"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/create_an_account"
                android:textColor="@color/blue" />

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/primary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/sign_in_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account"
            app:layout_constraintVertical_bias="@dimen/login_button_bias" />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>