<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.auth.ui.activities.main.fragments.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.auth.ui.activities.main.fragments.dashboard.DashboardFragment"
        android:label="@string/dashboard_label"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.auth.ui.activities.main.fragments.profile.ProfileFragment"
        android:label="@string/profile_label"
        tools:layout="@layout/fragment_profile" />
</navigation>