...
            android:layout_marginTop="24dp"
            android:text="@string/save_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <Button
            android:id="@+id/sign_out_button"
            style="@style/primary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:text="@string/sign_out_label"
...
